[tool.poetry]
name = "zipcode-distances"
version = "0.1.0"
description = "Simple script for calculating straight-line distances between US zipcodes"
authors = ["danielmckinnonanderson <danielmckinnon.anderson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zipcode_distances"}]

[tool.poetry.dependencies]
python = "^3.10"
geopy = "^2.4.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
